--- a/CashMachine/App.config
+++ b/CashMachine/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="data source=77.37.208.175;initial catalog=Fabula;persist security info=True;user id=JohnLock;password=55335533;MultipleActiveResultSets=True;"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
